Lab2/Code/syntax.output
Terminals unused in grammar

   LOWER_THAN_ELSE


State 45 conflicts: 1 shift/reduce
State 122 conflicts: 12 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI
   37     | WHILE LP error RP Stmt
   38     | RETURN error SEMI

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI
   43    | Specifier DecList error
   44    | Specifier Dec error

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | ID LP error RP
   68    | Exp LB error RB
   69    | error RP

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 20 27 36 37 38 42 43 44 67 68 69
INT (258) 19 65
FLOAT (259) 66
ID (260) 15 17 18 21 22 60 61 63 64 67
SEMI (261) 4 5 8 30 32 36 38 41 42
COMMA (262) 10 23 46 70
ASSIGNOP (263) 48 49
RELOP (264) 52
PLUS (265) 53
MINUS (266) 54 58
STAR (267) 55
DIV (268) 56
AND (269) 50
OR (270) 51
NOT (271) 59
DOT (272) 63
TYPE (273) 11
LP (274) 21 22 33 34 35 37 57 60 61 67
RP (275) 21 22 33 34 35 37 57 60 61 67 69
LB (276) 19 20 62 68
RB (277) 19 20 62 68
LC (278) 13 26
RC (279) 13 26 27
STRUCT (280) 13 14
RETURN (281) 32 38
IF (282) 33 34
ELSE (283) 34
WHILE (284) 35 37
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 7 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 25 41 42 43 44
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19 20, on right: 9 10 19 20 25 47 48
FunDec (41)
    on left: 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 21 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 6 31
StmtList (45)
    on left: 28 29, on right: 26 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37 38, on right: 28 33 34 35 37
DefList (47)
    on left: 39 40, on right: 13 26 39
Def (48)
    on left: 41 42 43 44, on right: 39
DecList (49)
    on left: 45 46, on right: 41 43 46
Dec (50)
    on left: 47 48, on right: 44 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69, on right: 30 32 33 34 35 48 49 50 51 52 53 54 55 56 57
    58 59 62 63 68 70 71
Args (52)
    on left: 70 71, on right: 60 70


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 26
    LC     shift, and go to state 27

    CompSt  go to state 28


State 20

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 18


State 25

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 26

   27 CompSt: error . RC

    RC  shift, and go to state 40


State 27

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   41 Def: Specifier . DecList SEMI
   42    | Specifier . error SEMI
   43    | Specifier . DecList error
   44    | Specifier . Dec error

    error  shift, and go to state 42
    ID     shift, and go to state 36

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 46


State 31

   39 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 31


State 32

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 33

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 48


State 34

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 35

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 24 (VarList)


State 36

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 37

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 38

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 51


State 39

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 40

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 41

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 27
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 42

   42 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 43

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 25

    $default  reduce using rule 47 (Dec)


State 44

   41 Def: Specifier DecList . SEMI
   43    | Specifier DecList . error

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 45

   44 Def: Specifier Dec . error
   45 DecList: Dec .
   46        | Dec . COMMA DecList

    error  shift, and go to state 71
    COMMA  shift, and go to state 72

    error  [reduce using rule 45 (DecList)]
    SEMI   reduce using rule 45 (DecList)


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 25 (ParamDec)


State 49

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 50

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 35


State 51

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 53

   27 CompSt: error . RC
   36 Stmt: error . SEMI
   69 Exp: error . RP

    SEMI  shift, and go to state 74
    RP    shift, and go to state 75
    RC    shift, and go to state 40


State 54

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


State 55

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


State 56

   60 Exp: ID . LP Args RP
   61    | ID . LP RP
   64    | ID .
   67    | ID . LP error RP

    LP  shift, and go to state 76

    $default  reduce using rule 64 (Exp)


State 57

   58 Exp: MINUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 78


State 58

   59 Exp: NOT . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 79


State 59

   57 Exp: LP . Exp RP

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 80


State 60

   32 Stmt: RETURN . Exp SEMI
   38     | RETURN . error SEMI

    error  shift, and go to state 81
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 82


State 61

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


State 62

   35 Stmt: WHILE . LP Exp RP Stmt
   37     | WHILE . LP error RP Stmt

    LP  shift, and go to state 84


State 63

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 64

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 65

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 27
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 86
    Stmt      go to state 65
    Exp       go to state 66


State 66

   30 Stmt: Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 67

   42 Def: Specifier error SEMI .

    $default  reduce using rule 42 (Def)


State 68

   48 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 98


State 69

   43 Def: Specifier DecList error .

    $default  reduce using rule 43 (Def)


State 70

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 71

   44 Def: Specifier Dec error .

    $default  reduce using rule 44 (Def)


State 72

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 43
    DecList  go to state 99
    Dec      go to state 100


State 73

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 74

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 75

   69 Exp: error RP .

    $default  reduce using rule 69 (Exp)


State 76

   60 Exp: ID LP . Args RP
   61    | ID LP . RP
   67    | ID LP . error RP

    error  shift, and go to state 101
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 102

    Exp   go to state 103
    Args  go to state 104


State 77

   69 Exp: error . RP

    RP  shift, and go to state 75


State 78

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   58    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    DOT   shift, and go to state 96
    LB    shift, and go to state 97

    $default  reduce using rule 58 (Exp)


State 79

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   59    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 59 (Exp)


State 80

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 105
    LB        shift, and go to state 97


State 81

   38 Stmt: RETURN error . SEMI
   69 Exp: error . RP

    SEMI  shift, and go to state 106
    RP    shift, and go to state 75


State 82

   32 Stmt: RETURN Exp . SEMI
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    SEMI      shift, and go to state 107
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 83

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 108


State 84

   35 Stmt: WHILE LP . Exp RP Stmt
   37     | WHILE LP . error RP Stmt

    error  shift, and go to state 109
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 110


State 85

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 86

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 87

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 88

   49 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 111


State 89

   52 Exp: Exp RELOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 112


State 90

   53 Exp: Exp PLUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 113


State 91

   54 Exp: Exp MINUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 114


State 92

   55 Exp: Exp STAR . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 115


State 93

   56 Exp: Exp DIV . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 116


State 94

   50 Exp: Exp AND . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 117


State 95

   51 Exp: Exp OR . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 118


State 96

   63 Exp: Exp DOT . ID

    ID  shift, and go to state 119


State 97

   62 Exp: Exp LB . Exp RB
   68    | Exp LB . error RB

    error  shift, and go to state 120
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 121


State 98

   48 Dec: VarDec ASSIGNOP Exp .
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 48 (Dec)


State 99

   46 DecList: Dec COMMA DecList .

    $default  reduce using rule 46 (DecList)


State 100

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 45 (DecList)


State 101

   67 Exp: ID LP error . RP
   69    | error . RP

    RP  shift, and go to state 122


State 102

   61 Exp: ID LP RP .

    $default  reduce using rule 61 (Exp)


State 103

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB
   70 Args: Exp . COMMA Args
   71     | Exp .

    COMMA     shift, and go to state 123
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 71 (Args)


State 104

   60 Exp: ID LP Args . RP

    RP  shift, and go to state 124


State 105

   57 Exp: LP Exp RP .

    $default  reduce using rule 57 (Exp)


State 106

   38 Stmt: RETURN error SEMI .

    $default  reduce using rule 38 (Stmt)


State 107

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 108

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 125
    LB        shift, and go to state 97


State 109

   37 Stmt: WHILE LP error . RP Stmt
   69 Exp: error . RP

    RP  shift, and go to state 126


State 110

   35 Stmt: WHILE LP Exp . RP Stmt
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 127
    LB        shift, and go to state 97


State 111

   49 Exp: Exp . ASSIGNOP Exp
   49    | Exp ASSIGNOP Exp .
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 49 (Exp)


State 112

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   52    | Exp RELOP Exp .
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    STAR   shift, and go to state 92
    DIV    shift, and go to state 93
    DOT    shift, and go to state 96
    LB     shift, and go to state 97

    $default  reduce using rule 52 (Exp)


State 113

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   53    | Exp PLUS Exp .
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    DOT   shift, and go to state 96
    LB    shift, and go to state 97

    $default  reduce using rule 53 (Exp)


State 114

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   54    | Exp MINUS Exp .
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . DOT ID
   68    | Exp . LB error RB

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    DOT   shift, and go to state 96
    LB    shift, and go to state 97

    $default  reduce using rule 54 (Exp)


State 115
